--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,5 @@
 (library
  (name rinha)
  (flags (:standard -w -30))
- (preprocess (pps ppx_deriving.show)))
+ (libraries yojson)
+ (preprocess (pps ppx_deriving.show ppx_deriving_yojson)))
